feat: lock databases by both instance id, database id and user id
